src/main.scss
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&family=Space+Grotesk:wght@400;500;700&display=swap');

$new-blue: #0077b6;
$global-primary-background: $new-blue;
$global-link-color: $new-blue;
$global-link-hover-color: lighten($new-blue, 10%);
$form-radio-checked-focus-background: lighten($new-blue, 10%);

$global-secondary-background: darken(#031927, 2%);
$global-muted-background: #fcfcfc;

$font-rubik: 'Rubik', sans-serif;
$font-space-grotesk: 'Space Grotesk', sans-serif;

$global-font-family: $font-rubik;
$global-font-size: 18px;
$inverse-global-color: rgba(#fff, 0.85);
$inverse-text-primary-color: rgba(#fff, 0.9);

$alert-primary-background: #1e87f0;
$alert-primary-color: #fff;

$alert-success-background: #32d296;
$alert-success-color: #fff;

$alert-warning-background: #faa05a;
$alert-warning-color: #fff;

$alert-danger-background: #f0506e;
$alert-danger-color: #fff;

$base-heading-font-family: $font-space-grotesk;
$base-heading-font-weight: 700;
$navbar-nav-item-font-family: $font-space-grotesk;
$navbar-nav-item-height: 60px;

@import "../node_modules/uikit/src/scss/variables-theme.scss";
@import "../node_modules/uikit/src/scss/mixins-theme.scss";
@import "../node_modules/uikit/src/scss/uikit-theme.scss";

body {
  overscroll-behavior: none;
}

h1 {
  font-size: 2.5rem;
  margin-bottom: 40px;
}

#menu .uk-navbar-nav li a {
  font-size: 1.2rem;
  font-weight: 500;
}

#menu .uk-navbar-nav a.uk-totop {
  padding-right: 30px;
}

#portal .uk-navbar-nav li a {
  font-size: 1rem;
  font-weight: 500;
  min-height: 0;
}

.uk-section.avoid-sticky-nav {
  padding-top: $navbar-nav-item-height + 40px;
}

.uk-form-label {
  font-size: 1.1rem;
}

form label.uk-width-1-1 {
  cursor: pointer;
}

#under-the-sea {
  background-image: url('../img/bg.jpg');
  background-size: cover;
  background-attachment: fixed;
  background-position: bottom center;
}

#home {
  background: rgba(0, 0, 0, 0.35);
}

#kohoutek-badge {
  max-height: 75vh;
  max-width: 75vw;
  margin-top: 45vh;
  transform: translate(0, -50%);
}

.kohoutek-frontactive {
  .kohoutek-totop {
    svg {
      display: none;
    }
  }
}

.kohoutek-frontactive .kohoutek-illuminate, .kohoutek-mobile-illuminate {
  color: $global-link-hover-color !important;
  font-weight: 700;
}

